Update Gradle. We don't need as many...
... LWJGL3 JVM args anymore, because we use constraints to ensure we're on LWJGL 3.4.1 .